# telegram-decabot

./: .gitignore  decabot.py  decathbot.py  setup.cfg
src/: telegram_bot.py
src/decathlon/: decathlon_stores.py  store.py  store_decoder.py  stores.json  stores.py
test/: test_stores.py  test_telegram_bot.py
