[metadata]
name = telegram-decabot
version = 1.0
description = Telegram Decabot, another Decathlon stock checker bot

[options]
package_dir =
  = src

packages = find:


python_requires = >=3.7
install_requires =
  python-telegram-bot
  geopy
  requests

[options.extras_require]
testing =
  pytest
  mock

[tool:pytest]
python_classes =
